# vuosaari_elec_forecasting

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py  schemas.py
config/: config.yaml
models/: trained_model.pkl
notebooks/: 01_eda_and_model_selection.ipynb
src/: __init__.py  config.py  data_fetcher.py  feature_engineering.py  model.py  train.py  utils.py
tests/: test_data_fetcher.py  test_feature_engineering.py  test_model.py
ui/: streamlit_app.py
